--- a/index.html
+++ b/index.html
@@ -4,22 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="default.css">
+    <link rel="stylesheet" href="320.css">
     <link rel="stylesheet" href="contact.css">
     <title>Contact</title>
 </head>
 <body>
+    <!-- Contact Section of Hotel ITOJU -->
     <section class="contact_section">
-        <!-- width 100% -->
-        
+
+        <!--  Code below contains both text and form elements-->
         <div class="contact_content">
 
+            <!-- =============================TEXT ELEMENTS STARTS==========================================================-->
            <div class="contact_text">
             <h2 class="heading">Contact us</h2> 
             <p class="contact_text">How would you like to contact us?  by email here: </p>
             <a href="hello.itoju@gmail.com" class="email">hello.itoju@gmail.com</a>
             <p class="contact_text">or fill this form</p>
            </div>
+           <!-- ==============================TEXT ELEMENTS ENDS ============================================================= -->
 
+           <!-- ==============================FORM ELEMENTS STARTS ============================================================= -->
             <form action="post">
                 <label for="fullName">Full Name</label><br>
                 <input class="field" name="name" id="fullName" placeholder="Enter Your Name" required></input><br>
@@ -31,6 +37,8 @@
                     <button type="submit">Submit</button>
                 </div>
             </form>
+           <!-- ==============================FORM ELEMENTS ENDS ============================================================= -->
+
         </div>
     </section>
 </body>
