--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="640.css">
     <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="640.css">
     <title>Contact</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
             <h2 class="heading">Contact us</h2> 
             <p class="contact_text">How would you like to contact us?  by email here: </p>
             <a href="hello.itoju@gmail.com" class="email">hello.itoju@gmail.com</a>
-            <p class="contact_text">or fill this form</p>
+            <p class="contact_text"><span class="bold">or fill this form</span></p>
            </div>
            <!-- ==============================TEXT ELEMENTS ENDS ============================================================= -->
 
